[tool.poetry]
name = "real-estate-toolkit"
version = "0.1.0"
description = ""
authors = ["David Almirall <david.almirall01@estudiant.upf.edu>, Gorka Bravo <gorka.bravo01@estudiant.upf.edu, Alex Muñoz <alex.munoz03@estudiant.upf.edu>"]
readme = "README.md"
packages = [{include = "real_estate_toolkit", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.0"
polars = "^1.17.1"
plotly = "^5.24.1"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
